add busy property

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./sm-module-save.css" />
 
     <div class="controls">
-      <sm-helper-button class="controls__save">save</sm-helper-button>
+      <sm-helper-button busy="[[busy]]" class="controls__save">save</sm-helper-button>
       <sm-helper-button class="controls__menu" icon="simpla:arrow-down"></sm-helper-button>
     </div>
 
