--- a/sm-module-save.html
+++ b/sm-module-save.html
@@ -4,7 +4,7 @@
     <style>:root{--icon-size:21px}:host{@apply(--typography);z-index:var(--z-index);display:inline-block}.controls{position:relative;display:-webkit-inline-box;display:-webkit-inline-flex;display:-ms-inline-flexbox;display:inline-flex;background:var(--blue);color:#fff;border-radius:var(--border-radius);z-index:1}.controls__save{padding:0 1.5em;font-weight:600}.controls__menu{width:var(--tool-size);border-left:1px solid var(--light-white)}.menu{background:#fff;width:calc(100% - 1px);padding-top:10px;margin:-10px auto 0;border-bottom-left-radius:var(--border-radius);border-bottom-right-radius:var(--border-radius);overflow:hidden;-webkit-transform:translateY(-100%);-ms-transform:translateY(-100%);transform:translateY(-100%);display:none}.menu[visible]{display:block;box-shadow:0 1px 1px var(--light-black)}.menu__item{list-style:none;padding:0 15px;color:var(--text-color)}</style>
 
     <div class="controls">
-      <sm-helper-button busy="[[busy]]" class="controls__save">save</sm-helper-button>
+      <sm-helper-button on-tap="save" busy="[[busy]]" class="controls__save">save</sm-helper-button>
       <sm-helper-button class="controls__menu" icon="simpla:arrow-down"></sm-helper-button>
     </div>
 
