toggle menu on menu button tap

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -5,7 +5,7 @@
 
     <div class="controls">
       <sm-helper-button on-tap="save" busy="[[busy]]" class="controls__save">save</sm-helper-button>
-      <sm-helper-button class="controls__menu" icon="simpla:arrow-down"></sm-helper-button>
+      <sm-helper-button on-tap="_menuOpenClose" class="controls__menu" icon="simpla:arrow-down"></sm-helper-button>
     </div>
 
     <ul class="menu" id="menu">
