--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 
     <link rel="import" href="../sm-module-save.html" />
   </head>
-  <body>
+  <body style="background: gray; padding: 80px;">
     <sm-module-save></sm-module-save>
   </body>
 </html>
