--- a/sm-module-save.html
+++ b/sm-module-save.html
@@ -1,15 +1,15 @@
-<html><head><meta charset="UTF-8"><link rel="import" href="../sm-connect-auth/sm-connect-auth.html"><link rel="import" href="../sm-helper-button/sm-helper-button.html"><link rel="import" href="../simpla/simpla.html"><link rel="import" href="../polymer/polymer.html"></head><body><dom-module id="sm-module-save">
+<html><head><meta charset="UTF-8"><link rel="import" href="../sm-connect-auth/sm-connect-auth.html"><link rel="import" href="../sm-ui-button/sm-ui-button.html"><link rel="import" href="../simpla-core/simpla-core.html"><link rel="import" href="../polymer/polymer.html"></head><body><dom-module id="sm-module-save">
   <template>
     <style include="sm-css"></style>
     <style>.controls,.menu{overflow:hidden}:root{--icon-size:21px}:host{@apply(--typography);z-index:var(--z-index);display:inline-block;overflow:hidden;border-radius:var(--border-radius)}.controls{position:relative;display:-webkit-inline-box;display:-webkit-inline-flex;display:-ms-inline-flexbox;display:inline-flex;background:var(--blue);border-radius:var(--border-radius);color:#fff;z-index:1}.controls__save{padding:0 1.5em;font-weight:600}.controls__save[busy]{color:var(--med-white)}.controls__menu{width:var(--tool-size);border-left:1px solid var(--light-white)}.menu{background:#fff;width:calc(100% - 1px);padding-top:10px;margin:-10px auto 0;border-bottom-left-radius:var(--border-radius);border-bottom-right-radius:var(--border-radius);-webkit-transform:translateY(-100%);-ms-transform:translateY(-100%);transform:translateY(-100%);display:none}.menu[visible]{display:block;box-shadow:0 1px 1px var(--light-black)}.menu__item{list-style:none;padding:0 15px;font-size:14px;font-weight:600;color:var(--dark-gray)}</style>
 
     <div class="controls">
-      <sm-helper-button on-tap="save" busy="[[busy]]" class="controls__save">save</sm-helper-button>
-      <sm-helper-button on-tap="_menuOpenClose" class="controls__menu" icon="[[menuIcon]]"></sm-helper-button>
+      <sm-ui-button on-tap="save" busy="[[busy]]" class="controls__save">save</sm-ui-button>
+      <sm-ui-button on-tap="_menuOpenClose" class="controls__menu" icon="[[menuIcon]]"></sm-ui-button>
     </div>
 
     <ul class="menu" id="menu">
-      <li id="logout" on-tap="logout" class="menu__item"><sm-helper-button icon="simpla:exit">Logout</sm-helper-button></li>
+      <li id="logout" on-tap="logout" class="menu__item"><sm-ui-button icon="simpla:exit">Logout</sm-ui-button></li>
     </ul>
 
     <sm-connect-auth id="auth"></sm-connect-auth>
