sm-connect-auth -> sm-utility-auth

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -12,7 +12,7 @@
       <li id="logout" on-tap="logout" class="menu__item"><sm-ui-button icon="simpla:exit">Logout</sm-ui-button></li>
     </ul>
 
-    <sm-connect-auth id="auth"></sm-connect-auth>
+    <sm-utility-auth id="auth"></sm-utility-auth>
 
   </template>
   <script src="./sm-module-save.js"></script>
