--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,16 @@
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="../sm-module-save.html" />
+
+    <style>
+      sm-module-save {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+      }
+    </style>
   </head>
-  <body style="background: gray; padding: 80px;">
+  <body>
 
     <sm-module-save></sm-module-save>
 
