--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>sm-module-save</title>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-
+    <script>
+      window.Polymer = window.Polymer || {};
+      window.Polymer.dom = 'shadow';
+    </script>
     <link rel="import" href="../sm-module-save.html" />
 
     <style>
