--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -8,11 +8,11 @@
       <sm-ui-button on-tap="toggleMenu" class="controls__menu" icon="[[_menuIcon]]"></sm-ui-button>
     </div>
 
-    <div class="menu" id="menu">
+    <sm-ui-callout arrow="top right" class="menu" id="menu">
       <template is="dom-repeat" items="[[menu]]">
         <sm-ui-button id="[[item.id]]" class="menu__item" icon="[[item.icon]]" on-tap="_menuItemTap">[[item.text]]</sm-ui-button>
       </template>
-    </div>
+    </sm-ui-callout>
 
     <sm-utility-auth id="auth"></sm-utility-auth>
 
