--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="./sm-module-save.css" inline>
 
     <div class="controls">
-      <sm-ui-button on-tap="save" busy="[[busy]]" class="controls__save">save</sm-ui-button>
-      <sm-ui-button on-tap="toggleMenu" class="controls__menu" icon="[[_menuIcon]]"></sm-ui-button>
+      <button is="sm-ui-button" on-tap="save" busy="[[busy]]" class="controls__save">save</button>
+      <button is="sm-ui-button" on-tap="toggleMenu" class="controls__menu" icon="[[_menuIcon]]"></button>
     </div>
 
     <sm-ui-callout arrow="top right" class="menu" id="menu" active="[[_menuActive]]">
       <template is="dom-repeat" items="[[menu]]">
-        <sm-ui-button id="[[item.id]]" class="menu__item" icon="[[item.icon]]" on-tap="_menuItemTap">[[item.text]]</sm-ui-button>
+        <button is="sm-ui-button" id="[[item.id]]" class="menu__item" icon="[[item.icon]]" on-tap="_menuItemTap">[[item.text]]</button>
       </template>
     </sm-ui-callout>
 
