include shady dom style reset

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -1,5 +1,6 @@
 <dom-module id="sm-module-save">
   <template>
+    <style include="sm-css-shady"></style>
     <style include="sm-css"></style>
     <link rel="stylesheet" href="./sm-module-save.css" inline>
 
