replace vulcanise with gulp-process-inline

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -1,3 +1,9 @@
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../simpla-core/simpla-core.html">
+<link rel="import" href="../sm-ui-button/sm-ui-button.html">
+<link rel="import" href="../sm-ui-callout/sm-ui-callout.html">
+<link rel="import" href="../sm-utility-auth/sm-utility-auth.html">
+
 <dom-module id="sm-module-save">
   <template>
     <style include="sm-css-shady"></style>
@@ -18,5 +24,5 @@
     <sm-utility-auth id="auth"></sm-utility-auth>
 
   </template>
-  <script src="./sm-module-save.js"></script>
+  <script src="./sm-module-save.js" inline></script>
 </dom-module>
