simpla-core -> sm-ui-core

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../simpla-core/simpla-core.html">
+<link rel="import" href="../sm-ui-core/sm-ui-core.html">
 <link rel="import" href="../sm-ui-button/sm-ui-button.html">
 <link rel="import" href="../sm-ui-callout/sm-ui-callout.html">
 <link rel="import" href="../sm-utility-auth/sm-utility-auth.html">
