setup foundations for new menu

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,12 @@
     <script>
       window.Polymer = window.Polymer || {};
       window.Polymer.dom = 'shadow';
+
+      simpla = {
+        config: {
+          server: 'https://api.simpla.io/'
+        }
+      };
     </script>
     <link rel="import" href="../sm-module-save.html" />
 
