--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../sm-ui-core/sm-ui-core.html">
 <link rel="import" href="../sm-ui-button/sm-ui-button.html">
-<link rel="import" href="../sm-ui-callout/sm-ui-callout.html">
+<link rel="import" href="../sm-ui-user-menu/sm-ui-user-menu.html">
 <link rel="import" href="../sm-utility-auth/sm-utility-auth.html">
 
 <dom-module id="sm-module-save">
@@ -10,16 +10,11 @@
     <style include="sm-css"></style>
     <link rel="stylesheet" href="./sm-module-save.css" inline>
 
-    <div class="controls">
-      <button is="sm-ui-button" on-tap="save" busy="[[busy]]" class="controls__save">save</button>
-      <button is="sm-ui-button" on-tap="toggleMenu" class="controls__menu" icon="[[_menuIcon]]"></button>
-    </div>
+      <button is="sm-ui-button" on-tap="save" busy="[[busy]]" class="save">save</button>
 
-    <sm-ui-callout arrow="top right" class="menu" id="menu" active="[[_menuActive]]">
-      <template is="dom-repeat" items="[[menu]]">
-        <button is="sm-ui-button" id="[[item.id]]" class="menu__item" icon="[[item.icon]]" on-tap="_menuItemTap">[[item.text]]</button>
-      </template>
-    </sm-ui-callout>
+      <sm-ui-user-menu id="menu" class="menu" callout="top right" email="[[user.email]]">
+        <sm-user-menu-item icon="simpla:exit" on-tap="logout">logout</sm-user-menu-item>
+      </sm-ui-user-menu>
 
     <sm-utility-auth id="auth"></sm-utility-auth>
 
