give positioning styles to host

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -18,6 +18,9 @@
         border-radius: var(--border-radius);
         box-shadow: var(--shadow);
         z-index: var(--on-top);
+        position: fixed;
+        top: 12px;
+        right: 12px;
       }
 
       .save {
