add singleton behavior and bind visibility to if Simpla is authenticated

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -17,6 +17,11 @@
         border-radius: var(--border-radius);
         box-shadow: var(--shadow);
         z-index: var(--on-top);
+
+        /* Default position is in top right hand corner */
+        position: fixed;
+        top: 12px;
+        right: 12px;
       }
 
       .save {
