include sm-module-notify, set intiial Simpla state values using functions

--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../sm-ui-core/sm-ui-core.html">
 <link rel="import" href="../sm-ui-user-menu/sm-ui-user-menu.html">
+<link rel="import" href="../sm-module-notify/sm-module-notify.html">
 
 <dom-module id="sm-module-save">
   <template>
