--- a/src/sm-module-save.html
+++ b/src/sm-module-save.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../simpla-v2-compat/simpla-v2-compat.html">
 <link rel="import" href="../sm-ui-core/sm-ui-core.html">
 <link rel="import" href="../sm-ui-user-menu/sm-ui-user-menu.html">
 <link rel="import" href="../sm-module-notify/sm-module-notify.html">
