--- a/test/sm-module-save.test.html
+++ b/test/sm-module-save.test.html
@@ -7,6 +7,7 @@
     <script src="../../web-component-tester/browser.js"></script>
     <script src="../../test-fixture/test-fixture-mocha.js"></script>
     <script src="../../simpla/simpla.js"></script>
+    <script src="../../es6-promise/es6-promise.auto.min.js"></script>
     <link rel="import" href="../../test-fixture/test-fixture.html">
 
     <script>
